--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
     align-items: center;
     flex-direction: column;
     border-radius: 20px;
-    background: linear-gradient(to bottom right,#2ee6c7,#2ee6d4);
+    background: linear-gradient(to bottom right,#87fae7,#2ee6d4);
     box-shadow: 0.1px 4px 8px 4px rgba(0,0,0,0.5);
 }
 
