--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
     align-items: center;
     flex-direction: column;
     border-radius: 20px;
-    background: linear-gradient(to bottom right,#87fae7,#5df5dc);
+    background: linear-gradient(to bottom right,#e344e0,#cc3bc9);
     box-shadow: 0.1px 4px 8px 4px rgba(0,0,0,0.5);
 }
 
@@ -187,7 +187,7 @@ input[type=range]::-webkit-slider-thumb{
   border-radius: 50%;
   cursor: pointer;
   z-index: 10;
-  background: #87fae7;
+  background: #e344e0;
   box-shadow: 0.1px 8px 8px 2px rgba(0,0,0,0.2) inset,
 	            0.1px 8px 8px 2px rgba(0,0,0,0.2);
 }
@@ -200,7 +200,7 @@ input[type=range]::-webkit-slider-thumb{
   left: 0;
   width: 100%;
   height: 100%;
-  background: #87fae7;
+  background: #e344e0;
   padding: 5px;
   z-index: 1000;
   display: flex;
@@ -277,7 +277,7 @@ box-shadow: inset 5px 5px 5px rgba(0,0,0,0.2),
   display: flex;
   align-items: center;
   border-radius: 20px 20px 0 0;
-  background: #87fae7;
+  background: #e344e0;
   transition: 0.4s;
   transform: translateY(80px);
 }
